--- a/week8/A-8/src/ItemCard/ItemCard.css
+++ b/week8/A-8/src/ItemCard/ItemCard.css
@@ -12,3 +12,25 @@
     justify-content: space-around;
     position: relative;
 }
+
+.action {
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.action a img {
+    width: 25px;
+    height: 25px;
+}
+
+.action a {
+    display: block;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    border-radius: 5px;
+    padding-top: 3px;
+    background: lightgrey;
+}
