--- a/week8/A-8/src/ItemCard/ItemCard.css
+++ b/week8/A-8/src/ItemCard/ItemCard.css
@@ -3,7 +3,7 @@
     max-width: 250px;
     padding: 10px;
     height: 375px;
-    border: 1px solid black;
+    border: 1px solid white;
     text-align: center;
     margin: 10px;
     border-radius: 10px;
@@ -11,6 +11,8 @@
     flex-direction: column;
     justify-content: space-around;
     position: relative;
+    background-color: black;
+    color: white;
 }
 
 .action {
@@ -34,3 +36,19 @@
     padding-top: 3px;
     background: lightgrey;
 }
+
+.action a:hover {
+    background: darkred;
+}
+
+.characterName {
+    font-family: "Rouge Script", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 50px;
+    margin-top:5px;
+  }
+
+  .isNPC {
+    padding: 0;
+  }
