added css for required lines of form

--- a/week9/A-9/src/NewCharacterForm/NewCharacterForm.css
+++ b/week9/A-9/src/NewCharacterForm/NewCharacterForm.css
@@ -4,3 +4,16 @@
     padding: 20px;
     color:white;
 }
+
+.form-group {
+    padding-bottom: 5px;
+}
+
+label {
+    padding-right: 10px;
+}
+
+label.required::before {
+    content: "* ";
+    color: red;
+  }
