--- a/week10/ex1/src/index.css
+++ b/week10/ex1/src/index.css
@@ -15,54 +15,75 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: #96ba91;
+  text-decoration:none;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  max-width: 800px;
+  background-color: rgba(93, 130, 93, 0.3);
+  padding-bottom: 150px;
+}
+
+ul {
+  margin-top: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.87);
+}
+
+li {
+  list-style: none;
+  padding: 50px;
+  font-size: 24px;
 }
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  line-height: 1.5;
+  text-align: center;
+  margin: 20px 120px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h2, h3 {
+  text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+img {
+  text-align: center;
+}
+
+.home-page p {
+  text-align: center;
+}
+
+.photo-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  text-align: center;
+}
+
+.photo-box img {
+  max-width: 300px;
+  margin: 20px;
+}
+
+p {
+  margin-left: 75px;
+  margin-right: 75px;
+}
+
+.navigation {
+  
 }
