--- a/week10/A-10/src/ItemCard/ItemCard.css
+++ b/week10/A-10/src/ItemCard/ItemCard.css
@@ -15,6 +15,15 @@
     color: white;
 }
 
+.characterCard a {
+    text-decoration: none;
+    color: darkred;
+}
+
+.characterCard a:hover {
+    color: white;    
+}
+
 .action {
     margin: 10px;
     display: flex;
