--- a/week10/A-10/src/index.css
+++ b/week10/A-10/src/index.css
@@ -1,14 +1,14 @@
 body {
     background-color: rgb(53, 7, 7);
-    margin: 0;
   }
   
   .card-info-page {
-    max-width: 1237px;
-    margin: 0 auto;
+    max-width: 800px;
+    margin: 20px auto;
     background-color: black;
     padding-top: 30px;
-    padding-bottom: 50px;
+    border: 1px solid white;
+    border-radius: 20px;
   }
   
   .card-info-page h1 {
@@ -29,26 +29,28 @@ body {
   }
 
   .fullprofile-img {
-    margin: 0 auto;
+    margin: 10px auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: 10px;
   }
 
-  p.return-to-home {
+  .character-details {
+    padding-top: 20px;
+    padding-bottom: 70px;
+  }
+
+  .return-to-home {
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
     margin: 50px;
-    padding: 25px;
     text-decoration: none;
     color: white;
     text-align: center;
     font-size: 20px;
     border-top: 1px solid white;
-  }
-
-  .return-to-home:visited {
-    color: white;
   }
 
   .return-to-home:hover {
