--- a/week11/11-A/sketch3/sketch.css
+++ b/week11/11-A/sketch3/sketch.css
@@ -2,6 +2,8 @@ body {
     margin: 0 auto;
     text-align: center;
     position: relative;
+    background-color: black;
+    color: white;
 }
 
 body::after {
