--- a/week12/12-A/sketch.css
+++ b/week12/12-A/sketch.css
@@ -2,12 +2,13 @@ body {
     margin: 0 auto;
     text-align: center;
     position: relative;
+    background-color: #9DD0E0;
 }
 
 body::after {
     content: '';
     display: block;
-    height: 50px;
+    height: 150px;
   }
 
 footer {
@@ -16,3 +17,24 @@ footer {
     width: 100%;
     height: 50px;
 }
+
+.satisfy-regular {
+    font-family: "Satisfy", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+
+h1 {
+    font-size: 72px;
+  }
+
+p {
+    font-size: 24px;
+  }
