--- a/week15/final/src/ItemCard/ItemCard.css
+++ b/week15/final/src/ItemCard/ItemCard.css
@@ -1,11 +1,11 @@
 .characterCard {
     width: 100%;
-    max-width: 250px;
+    max-width: 500px;
     padding: 10px;
-    height: 375px;
+    height: 250px;
     border: 1px solid white;
     text-align: center;
-    margin: 10px;
+    margin: 15px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -24,7 +24,11 @@
     color: white;    
 }
 
-.action {
+.characterName {
+    font-size: 30px;
+  }
+
+/* .action {
     margin: 10px;
     display: flex;
     flex-direction: row;
@@ -48,12 +52,4 @@
 
 .action a:hover {
     background: darkred;
-}
-
-.characterName {
-    font-family: "Rouge Script", cursive;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 50px;
-    margin-top:5px;
-  }
+} */
