--- a/week13/A-13/sketch.css
+++ b/week13/A-13/sketch.css
@@ -1,10 +1,10 @@
 body {
-    margin: 0 auto;
-    text-align: center;
-    position: relative;
+    margin: 0;
+    /* text-align: center;
+    position: relative; */
 }
 
-body::after {
+/* body::after {
     content: '';
     display: block;
     height: 50px;
@@ -15,4 +15,4 @@ footer {
     bottom: 0;
     width: 100%;
     height: 50px;
-}
+} */
