--- a/week15/final/src/App.css
+++ b/week15/final/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(53, 7, 7);
+  background-color: rgb(205, 208, 225);
   margin: 0;
 }
 
@@ -11,22 +11,72 @@ body {
 }
 
 .page {
-  /* max-width: 1300px; */
   margin: 0 auto;
-  background-color: black;
 }
 
 h1, h2 {
   font-size: 50px;
   padding-top:10px;
-  color:white;
   text-align: center;
+}
+
+.project-info-page {
+  max-width: windowWidth;
+  margin: 20px auto;
+  padding-top: 30px;
+  border: 1px solid white;
+  border-radius: 20px;
+}
+
+.project-info-page h1 {
+  font-family: "Rouge Script", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 50px;
+  padding-top:10px;
+  text-align: center;
+}
+
+.project-info-page p {
+  text-align: center;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.fullprofile-img {
+  min-width: 25%;
+  max-width: 75%;
+  padding: 50px;
+  margin: 10px auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project-details {
+  padding-top: 20px;
+  padding-bottom: 70px;
+}
+
+.return-to-home {
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+  margin: 50px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 20px;
+  border-top: 1px solid white;
+}
+
+.return-to-home:hover {
+  color: rgb(150, 125, 218);
 }
 
 footer {
   padding-top: 50px;
   padding-bottom: 50px;
-  color: white;
   margin: 0 auto;
 }
 
