--- a/week15/final/src/ItemCard/ItemCard.css
+++ b/week15/final/src/ItemCard/ItemCard.css
@@ -11,11 +11,12 @@
     flex-direction: column;
     justify-content: space-around;
     position: relative;
+    box-shadow: 0px 0px 10px 2px #888888;
 }
 
 .projectCard img {
     height:300px;
-    width: 300px;
+    width: 500px;
 }
 
 .projectCard a {
