--- a/week15/final/src/ItemCard/ItemCard.css
+++ b/week15/final/src/ItemCard/ItemCard.css
@@ -1,9 +1,10 @@
 .projectCard {
     width: 100%;
     max-width: 600px;
-    padding: 10px;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
     height: 500px;
-    border: 1px solid white;
     text-align: center;
     margin: 10px;
     border-radius: 10px;
@@ -16,7 +17,9 @@
 
 .projectCard img {
     height:400px;
-    width: 500px;
+    width: 600px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 2px #EEEEEE;
 }
 
 .projectCard a {
@@ -25,6 +28,11 @@
 
 .projectCard a:hover {
     color: white;    
+}
+
+.projectCard p {
+    margin: 0;
+    padding: 0;
 }
 
 .projectName {
