--- a/week15/final/src/App.css
+++ b/week15/final/src/App.css
@@ -18,23 +18,16 @@ h1, h2 {
   font-size: 50px;
   padding-top:10px;
   text-align: center;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal
 }
 
 .project-info-page {
   max-width: windowWidth;
   margin: 20px auto;
   padding-top: 30px;
-  border: 1px solid white;
   border-radius: 20px;
-}
-
-.project-info-page h1 {
-  font-family: "Rouge Script", cursive;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 50px;
-  padding-top:10px;
-  text-align: center;
 }
 
 .project-info-page p {
@@ -83,3 +76,60 @@ footer {
 footer p {
   text-align: center;
 }
+
+
+/* Font CSS Info
+
+.ubuntu-light {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.ubuntu-regular {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ubuntu-medium {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.ubuntu-bold {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.ubuntu-light-italic {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.ubuntu-regular-italic {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.ubuntu-medium-italic {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.ubuntu-bold-italic {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.permanent-marker-regular {
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+} */
