--- a/week15/final/src/ItemCard/ItemCard.css
+++ b/week15/final/src/ItemCard/ItemCard.css
@@ -1,10 +1,10 @@
 .projectCard {
     width: 100%;
-    max-width: 600px;
+    max-width: 550px;
     padding-top: 5px;
-    padding-right: 10px;
-    padding-left: 10px;
-    height: 500px;
+    padding-right: 5px;
+    padding-left: 5px;
+    height: 550px;
     text-align: center;
     margin: 10px;
     border-radius: 10px;
@@ -17,7 +17,7 @@
 
 .projectCard img {
     height:400px;
-    width: 600px;
+    width: 500px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 2px #EEEEEE;
 }
@@ -33,10 +33,18 @@
 .projectCard p {
     margin: 0;
     padding: 0;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .projectName {
+    margin: 0;
+    padding: 0;
     font-size: 30px;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal
   }
 
 /* .action {
