--- a/week15/final/src/App.css
+++ b/week15/final/src/App.css
@@ -3,6 +3,35 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+nav {
+  border-top: 1px dashed black;
+  border-bottom: 1px dashed black;
+  font-size: 20px;
+  margin-bottom: 50px;
+  text-decoration: none;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+}
+
+nav li {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .collection {
   display: flex;
   flex-direction: row;
@@ -21,6 +50,27 @@ h1, h2 {
   font-family: "Permanent Marker", cursive;
   font-weight: 400;
   font-style: normal
+}
+
+h3 {
+  font-size: 20px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+h4 {
+  font-size: 18px;
+  padding-top:10px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+p {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .project-info-page {
@@ -77,6 +127,38 @@ footer p {
   text-align: center;
 }
 
+.headshot {
+  width:30%;
+  height:30%;
+}
+
+.artist-details {
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.artist-details-text {
+  margin-left: 30px;
+}
+
+.artist-details-text p {
+  margin-left: 15px;
+}
+
+.artist-details-text ul {
+  padding-left: 15px;
+  list-style: none;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.artist-details-text li {
+  padding: 5px;
+}
 
 /* Font CSS Info
 
