--- a/week15/final/src/assets/Masthead/Masthead.css
+++ b/week15/final/src/assets/Masthead/Masthead.css
@@ -4,3 +4,11 @@
     text-align: center;
     max-width: 1237px;
 }
+
+.masthead h1 {
+    margin-bottom: 0;
+}
+
+.masthead h3 {
+    margin-top: 5;
+}
