--- a/week15/final/src/css/App.css
+++ b/week15/final/src/css/App.css
@@ -19,6 +19,10 @@ nav {
   font-style: normal
 }
 
+nav a:hover{
+  color:white;
+}
+
 nav ul {
   display: flex;
   flex-direction: row;
@@ -76,6 +80,7 @@ footer nav {
   margin-bottom: 0;
 }
 
+
 /* "Home" View CSS Info*/
 
 .collection {
@@ -88,6 +93,8 @@ footer nav {
 .page {
   margin: 0 auto;
 }
+
+
 
 /* "About" View CSS Info*/
 
@@ -123,6 +130,8 @@ footer nav {
 .artist-details-text li {
   padding: 5px;
 }
+
+
 
 /* "Project Detail" Page CSS */
 
